--- a/app/views/console/volumes/_form.html.erb
+++ b/app/views/console/volumes/_form.html.erb
@@ -8,8 +8,14 @@
 
   <%= render :partial => "console/shared/upload_thumb_image_fields", locals: { f: f } %>
 
-  <%= f.input :desc, label: "描述", as: :text, input_html: { rows: "10" } %>
-  <%= f.input :content, label: "内容", input_html: { rows: 12 } %>
+  <%= f.input :desc, label: "描述", as: :text, input_html: { rows: "5" } %>
+  <div class="form-group">
+    <label>内容</label>
+    <div id="epiceditor">
+      <%= f.text_area :content, rows: "12", class: "form-control" %>
+    </div>
+  </div>
+  <%#= f.input :content, label: "内容", input_html: { rows: 12 } %>
 
   <div class="form-group">
     <button type="submit" class="btn btn-primary">编辑</button>
