--- a/app/assets/stylesheets/modules/header.css.scss
+++ b/app/assets/stylesheets/modules/header.css.scss
@@ -25,9 +25,18 @@
     overflow: hidden;
     line-height: 50px;
     font-size: 16px;
+
+    ul {
+      list-style: none;
+    } 
+
     li {
       float: left;
       padding: 0 10px;
+
+      a {
+        color: #fff;
+      }
     }
   }
 }
