--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -1,13 +1,33 @@
+<header class="g_headerMobile">
+  <a href="javascript:;" class="g_headerMobile_navBtn" id="j_mnavBtn">
+    <span class="glyphicon glyphicon-cog"></span>
+  </a>
+
+  <a href="#" class="g_headerMobile_logo"></a>
+
+  <nav class="g_headerMobile_nav" id="j_mnav">
+    <ul>
+      <li><a href="#">首页</a></li>
+      <li><a href="#">频道</a></li>
+      <li><a href="#">资料库</a></li>
+    </ul>
+  </nav>
+</header>
+
 <header class="g_header">
   <div class="container">
     <div class="g_header_main">
       <h1 class="g_logo">
-        <a href="#" class="g_logo_img"></a>
+        <a href="#" class="g_logo_img">
+          <div></div>
+        </a>
+
+        <a href="#" class="g_logo_img-tiny"></a>
       </h1>
 
-      <nav class="g_nav" id="j_navbarCollapse">
+      <nav class="g_nav">
         <ul>
-          <li><a href="#">首页</a></li>
+          <li class="current"><a href="#">首页</a></li>
           <li><a href="#">频道</a></li>
           <li><a href="#">资料库</a></li>
         </ul>
