update application stylesheets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,4 @@
 /*
  *= require bootstrap
- *= require ./modules/header
- *= require_self
+ *= require ./modules/application
  */
-
-body {
-  height: 2000px;
-}
-
-.g_wrapper {
-  padding-top: 150px;
-}
