--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -19,10 +19,21 @@
     <div class="g_header_main">
       <h1 class="g_logo">
         <a href="#" class="g_logo_img">
-          <div></div>
+          <div class="g_logo_img_hover">
+            <p>
+              <span class="label label-primary">一起来lu2次元</span>
+              <span class="label label-info">Vol.102</span>
+            </p>
+            喜欢自虐吗？喜欢自虐吗？喜欢自虐吗？喜欢自虐吗？
+          </div> 
         </a>
 
-        <a href="#" class="g_logo_img-tiny"></a>
+        <a href="#" class="g_logo_img-tiny">
+          <span>
+            一起来lu二次元 <br>
+            vol.103
+          </span>
+        </a>
       </h1>
 
       <nav class="g_nav">
