--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   padding-top: 50px;
-  background: #313130;
+  background: $gBlack;
   transition: all .2s ease 0;
 
   .g_header_main {
@@ -27,9 +27,23 @@
       background: asset-url('logo.png') 0 0 no-repeat;
       transition: background .3s ease 0;
       &:hover {
+        text-decoration: none;
+        padding: 1px;
         background: asset-url('logo-hover.png') 0 0 no-repeat;
-        div {
+        .g_logo_img_hover {
           display: block;
+        }
+      }
+      .g_logo_img_hover {
+        display: none;
+        font-size: 16px;
+        line-height: 1.6;
+        height: 80px;
+        margin: 10px 10px 10px 100px;
+        color: $gBlack;
+        overflow: hidden;
+        p {
+          margin-bottom: 5px;
         }
       }
     }
@@ -62,7 +76,7 @@
       }
       a {
         padding: 10px 5px;
-        color: #bfbfbf;
+        color: $gBlackLight;
         &:hover {
           text-decoration: none;
           color: #fff;
@@ -77,7 +91,7 @@
   // transition: all .3s ease 0;
 
   .g_header_main {
-    padding-left: 197px;
+    padding-left: 235px;
   }
 
   .g_logo {
@@ -86,10 +100,23 @@
       display: none;
     }
     a.g_logo_img-tiny {
+      position: relative;
       display: block;
       width: 197px;
       height: 50px;
-      background: asset-url('header-logo-tiny.png')
+      background: asset-url('header-logo-tiny.png');
+      &:hover span {
+        display: block;
+      }
+      span {
+        display: none;
+        position: absolute;
+        bottom: 3px;
+        left: 200px;
+        font-size: 12px;
+        color: #fff;
+        white-space: nowrap;
+      }
     }
   }
 
@@ -104,7 +131,7 @@
   display: none;
   height: 50px;
   line-height: 55px;
-  background: #313130;
+  background: $gBlack;
   color: #fff;
 
   a.g_headerMobile_logo {
@@ -118,7 +145,7 @@
     float: right;
     padding: 0 10px;
     margin-right: 5px;
-    color: #bfbfbf;
+    color: $gBlackLight;
     font-size: 18px;
     &:hover {
       color: #fff;
@@ -130,7 +157,7 @@
     position: absolute;
     z-index: 1;
     top: 50px;
-    background: #313130;
+    background: $gBlack;
     width: 100%;
     ul {
       margin: 0;
