--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,26 +17,18 @@
 
   <div class="g_wrapper">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-3" role="navigation">
-          <!-- <div style="height:200px; background:red;" ></div> -->
-          <%= render 'layouts/application/sidebar' %>
-        </div>
-
-        <div class="col-sm-9">
-          <!-- <div style="height:200px; background:blue;" ></div> -->
-          <% flash.each do |key, value| %>
-            <%= content_tag(:div, value, class: "alert alert-#{key}") %>
-          <% end %>
-          <%= yield %>
-        </div>
-      </div>
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+      <% end %>
+      <%= yield %>
     </div>
   </div>
 
-  <footer>
-    <div class="container">
-      <p>© Company 2014</p>
+  <footer class="g_footer">
+    <hr>
+    <div class="container text-right">
+      <p>本站为机核网非官方粉丝站</p>
+      <p>All Rights Reserved 2009-2014 Game Cores</p>
     </div>
   </footer>
   
