--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -68,7 +68,7 @@
     li {
       float: left;
       padding: 0 25px;
-      &.current {
+      &.active {
         a {
           color: #fff;
           border-bottom: 10px solid #fff;
