--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -3,14 +3,10 @@
     <span class="glyphicon glyphicon-cog"></span>
   </a>
 
-  <a href="#" class="g_headerMobile_logo"></a>
+  <%= link_to "", root_url, class: "g_headerMobile_logo" %>
 
   <nav class="g_headerMobile_nav" id="j_mnav">
-    <ul>
-      <li><a href="#">首页</a></li>
-      <li><a href="#">频道</a></li>
-      <li><a href="#">资料库</a></li>
-    </ul>
+    <%= render "layouts/application/header_nav" %>
   </nav>
 </header>
 
@@ -21,27 +17,24 @@
         <a href="#" class="g_logo_img">
           <div class="g_logo_img_hover">
             <p>
-              <span class="label label-primary">一起来lu2次元</span>
-              <span class="label label-info">Vol.102</span>
+              <span class="label label-primary"><%= latest_vol.show.name %></span>
+              <span class="label label-info"><%= latest_vol.show_no %></span>
             </p>
-            喜欢自虐吗？喜欢自虐吗？喜欢自虐吗？喜欢自虐吗？
+            <span class="glyphicon glyphicon-music"></span>
+            <%= latest_vol.title %>
           </div> 
         </a>
 
         <a href="#" class="g_logo_img-tiny">
           <span>
-            一起来lu二次元 <br>
-            vol.103
+            <%= latest_vol.show.name %> <br>
+            <%= latest_vol.show_no %>
           </span>
         </a>
       </h1>
 
       <nav class="g_nav">
-        <ul>
-          <li class="current"><a href="#">首页</a></li>
-          <li><a href="#">频道</a></li>
-          <li><a href="#">资料库</a></li>
-        </ul>
+        <%= render "layouts/application/header_nav" %>
       </nav>
     </div>
   </div>
