--- a/app/assets/stylesheets/modules/application/_base.css.scss
+++ b/app/assets/stylesheets/modules/application/_base.css.scss
@@ -1,7 +1,65 @@
 body {
-  height: 2000px;
+  // height: 2000px;
 }
 
 .g_wrapper {
   padding-top: 150px;
+}
+
+.g_djWall {
+  li {
+    float: left;
+    width: 60px;
+    height: 60px;
+    margin: 0 10px 10px 0;
+    a, img {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.gcd_header {
+  position: relative;
+  // height: 13rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  // border-bottom: 1px solid $gGrayEx;
+  .gcd_header_hr {
+    position: absolute;
+    top: 10rem;
+    left: 0;
+    width: 100%;
+    height: 0;
+    border-top: 1px solid $gGrayEx;
+  }
+  .gcd_header_thumb {
+    height: 20rem;
+    // margin: 0 2rem;
+    padding: 1rem;
+    border: 1px solid $gGrayEx;
+    line-height: 18rem;
+    text-align: center;
+    background: #fff;
+    img {
+      max-height: 100%; 
+      max-width: 100%; 
+      vertical-align: middle;
+    }
+  }
+  .gcd_header_info {
+    padding-top: 5rem;
+    h2 {
+      line-height: 5rem;
+      margin: 0;
+    }
+    p {
+      margin-top: 1.2rem;
+      margin-bottom: .8rem;
+    }
+    p.gcd_header_info_desc {
+      color: $gGrayS;
+    }
+  }
 }
