--- a/app/assets/stylesheets/modules/application/_overwrite_bootstrap.css.scss
+++ b/app/assets/stylesheets/modules/application/_overwrite_bootstrap.css.scss
@@ -7,3 +7,5 @@ h3 {font-size:18px}
 h4 {font-size:14px}
 h5 {font-size:12px}
 h6 {font-size:10px}
+
+h1,h2,h3,h4,h5,h6 {font-family: "Microsoft YaHei", sans-serif;}
