modify style slightly

--- a/app/assets/stylesheets/modules/application/_base.css.scss
+++ b/app/assets/stylesheets/modules/application/_base.css.scss
@@ -41,7 +41,7 @@ body {
     border: 1px solid $gGrayEx;
     line-height: 18rem;
     text-align: center;
-    background: #fff;
+    background: #f9f9f9;
     img {
       max-height: 100%; 
       max-width: 100%; 
