--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,4 +1,6 @@
-<%= content_for :wrapper_before do %>
+<% content_for :main_title, "wiki资料 - #{@card.title}" %>
+
+<% content_for :wrapper_before do %>
   <div class="gcd_header">
     <div class="gcd_header_hr"></div>
     <div class="container">
