update application style

--- a/app/assets/stylesheets/modules/player.css.scss
+++ b/app/assets/stylesheets/modules/player.css.scss
@@ -1,5 +1,4 @@
 @import "./variables";
 @import "./overwrite_bootstrap";
 @import "./base";
-@import "./application/base";
-@import "./application/header";
+@import "./player/base";
