--- a/app/assets/stylesheets/modules/application/_base.css.scss
+++ b/app/assets/stylesheets/modules/application/_base.css.scss
@@ -87,9 +87,10 @@ body {
   }
   .g_cardtype_cards {
     box-sizing: content-box;
+    border-top: $gGrayEx 1px solid;
     background: #f4f4f4;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     margin: 0;
     height: 110px;
     overflow: hidden;
