--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -86,6 +86,20 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .g_header {
+    .g_header_main {
+      padding-left: 260px;
+    }
+    .g_nav {
+      font-size: 16px;
+      li {
+        padding: 0 10px;
+      }
+    }
+  }
+}
+
 .g_header-scroll {
   padding-top: 0px;
   // transition: all .3s ease 0;
