--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Cards#index</h1>
-<p>Find me in app/views/cards/index.html.erb</p>
+<% content_for :main_title do %>
+  <% if @card_type.present? %>
+    wiki资料 - <%= @card_type.name %>
+  <% else %>
+    wiki列表
+  <% end %>
+<% end %>
+
+<div class="row">
+  <div class="col-sm-3">
+    <ul class="g_sideNav list-unstyled">
+      <%= nav_link "全部", cards_url %>
+      <% @card_types.each do |ct| %>
+        <%= nav_link ct.name, card_type_cards_url(ct) %>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="col-sm-9">
+    <% if @card_type.present? %>
+      <p>
+        <blockquote>
+          <%= @card_type.desc %>
+        </blockquote>
+      </p>
+      <hr>
+    <% end %>
+
+    <%= if_data_present(@cards) do %>
+      <% @cards.each do |c| %>
+        <div class="media">
+          <%= link_to card_url(c), class: "pull-left" do %>
+            <%= image_tag thumb_image_path(c), class: "media-object img-thumbnail" %>
+          <% end %>
+          <div class="media-body">
+            <h4 class="media-heading"><%= link_to c.title, card_url(c) %></h4>
+            <%= c.desc %>
+          </div>
+        </div>
+      <% end %>
+      <%= paginate @cards, :theme => 'bootstrap' %>
+    <% end %>
+  </div>
+</div>
