--- a/app/assets/stylesheets/modules/_variables.css.scss
+++ b/app/assets/stylesheets/modules/_variables.css.scss
@@ -1,4 +1,5 @@
 $gMain: #f15f58;
+$gMainS: #da5650;
 $gBlackLight: #bfbfbf;
 $gBlack: #313130;
 $gBlackEx: #000;
@@ -6,3 +7,4 @@ $gGray: #606060;
 $gGrayS: #808080;
 $gGraySS: #dadada;
 $gGrayEx: #eee;
+$gAboutWhite: #f8f8f8;
