--- a/app/assets/stylesheets/modules/_base.css.scss
+++ b/app/assets/stylesheets/modules/_base.css.scss
@@ -14,7 +14,7 @@
     }
   }
   li.active a {
-    border-right: 3px solid $gGray;
+    border-right: 3px solid $gGraySS;
     padding: 0 10px 0 0;
     margin: 5px 0;
     font-weight: bold;
