--- a/app/views/layouts/console.html.erb
+++ b/app/views/layouts/console.html.erb
@@ -7,8 +7,7 @@
 
   <!-- Stylesheets -->
   <%= stylesheet_link_tag "console", media: "all", "data-turbolinks-track" => true %>
-  <%= render partial: "layouts/specific_css" %>
-  <%= yield :stylesheets %>
+  <%= render 'layouts/stylesheets' %>
 
   <%= csrf_meta_tags %>
 </head>
@@ -43,8 +42,6 @@
     _TOKEN_ = "<%= form_authenticity_token %>";
   </script>
   <%= javascript_include_tag "console", "data-turbolinks-track" => true %>
-  <%= yield :prepare_javascripts %>
-  <%= render partial: "layouts/specific_js" %>
-  <%= yield :javascripts %>
+  <%= render 'layouts/javascripts' %>
 </body>
 </html>
