--- a/app/views/layouts/player/_side_nav.html.erb
+++ b/app/views/layouts/player/_side_nav.html.erb
@@ -1,10 +1,12 @@
-<div class="gp_sidebar">
-  <p>
-    <%= link_to "全部电台", shows_url %> - <%= @vol.show.name %> - <%= @vol.title %>
-  </p>
-  <ul class="g_sideNav list-unstyled">
-    <% @vol.show.volumes.each do |v| %>
-      <%= nav_link "#{v.show_no} #{v.title}", volume_url(v) %>
-    <% end %>
-  </ul>
+<div class="gp_sidebar" id="j_sidebar">
+  <div class="inner">
+  <!--   <p>
+      <%= @vol.show.name %> - <%= @vol.title %>
+    </p> -->
+    <ul class="g_sideNav list-unstyled">
+      <% @vol.show.volumes.each do |v| %>
+        <%= nav_link "#{v.show_no} #{v.title}", volume_url(v) %>
+      <% end %>
+    </ul>
+  </div>
 </div>
