--- a/app/assets/stylesheets/modules/application/_header.css.scss
+++ b/app/assets/stylesheets/modules/application/_header.css.scss
@@ -6,7 +6,7 @@
   width: 100%;
   padding-top: 50px;
   background: $gBlack;
-  transition: all .2s ease 0;
+  @include vendor-prefix(transition, all .2s ease 0);
 
   .g_header_main {
     position: relative;
@@ -25,7 +25,7 @@
       width: 245px;
       height: 100px;
       background: asset-url('logo.png') 0 0 no-repeat;
-      transition: background .3s ease 0;
+      @include vendor-prefix(transition, background .3s ease 0);
       &:hover {
         text-decoration: none;
         padding: 1px;
